--- a/_config.yml
+++ b/_config.yml
@@ -1,93 +1,23 @@
-# ---------------------------------------------------------------
-# Site Information Settings
-# ---------------------------------------------------------------
-# title can include HTML code.
+# Hexo Configuration
+## Docs: https://hexo.io/docs/configuration.html
+## Source: https://github.com/hexojs/hexo/
+
+# Site
 title: ybbzbb's blog
+subtitle: blog
 description: 只是做一些笔记
+keywords: java, python, 机器学习, 人工智能, 深度学习,抓爬 ,爬虫 , spider, clawler
 author: ybbzbb
-language: zh-CN
+language: zh-Hans
 timezone: Asia/Shanghai
-
-# custom Site settings
-SEOTitle: 笔记
-keyword: "java, python, 机器学习, 人工智能, 深度学习,抓爬 ,爬虫 , spider, clawler" # seo key words
-
-favicon: # your favicon png
-# custom end
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://ybbzbb.github.io
 root: /
-# :year/:month/:day/:title/
-permalink: :title/
+permalink: :year/:month/:day/:title/
 permalink_defaults:
 
-footer:
-# Specify the date when the site was setup.
-# If not defined, current year will be used.
-  since: 2019
-
-  # Icon between year and copyright info.
-  # From: http://fontawesome.io/
-  # Example: user
-  icon: heart
-
-  # If not defined, will be used `author` from Hexo main config.
-  copyright: ybbzbb
-  # -------------------------------------------------------------
-  # Hexo link (Powered by Hexo).
-  powered: false
-  # Theme & scheme info link (Theme - A-RSnippet).
-  theme: false
-
-  # -------------------------------------------------------------
-  # Any custom text can be defined here.
-  # custom_text: Hosted by <a target="_blank" href="https://pages.github.com">GitHub Pages</a>
-
-# ---------------------------------------------------------------
-# Menu Settings
-# ---------------------------------------------------------------
-menu:
-  home: /
-  About: /about/
-  # LeetCode-category: /leetcode-category/
-  # LeetCode-tag: /leetcode-tag/
-  # archives: /archives/
-  # tags: /tags/
-  # projects: /portfolio-slim/
-  # support: /support/
-  # RSS: /atom.xml
-
-# ---------------------------------------------------------------
-# SNS settings
-# ---------------------------------------------------------------
-# Set rss to false to disable feed link.
-# Leave url as empty to use site's feed link.
-# Set url to specific value if you have burned your feed already.
-rss:
-  enable: false
-  url:                    # if empty, use default url, root_path/atom.xml
-
-# email: xxx@gmail.com
-# weibo_username:
-zhihu_username: zheng-rui-24-72
-github_username: ybbzbb
-# twitter_username: yingjieYJH
-# facebook_username:
-# linkedin_username:
-
-# ---------------------------------------------------------------
-# Sidebar settings
-# ---------------------------------------------------------------
-sidebar: true
-sidebar-about-description: java 小爬虫，目前正在进军机器学习!
-sidebar-avatar-url: /images/head.png
-# sidebar-description-after-icons: <a href="https://www.patreon.com/arsnippet" target="_blank"><img src="/img/patreon.png" alt="support my work at patron"></a><br><br><a href="https://arsnippet.freeflarum.com/" target="_blank"><img src="/img/forum.jpg" alt="support my work at patron"></a><br><br><a href="https://discord.gg/CB6CPzq" target="_blank"><img src="/img/discord.png" alt="Join the Discord"></a>
-
-# ---------------------------------------------------------------
-# Hexo official settings
-# ---------------------------------------------------------------
 # Directory
 source_dir: source
 public_dir: public
@@ -98,14 +28,14 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
-# Writing: Defined by Hexo
-new_post_name: :title.md                  # File name of new posts
+# Writing
+new_post_name: :title.md # File name of new posts
 default_layout: post
-titlecase: false                          # Transform title into titlecase
-external_link: true                       # Open external links in new tab
+titlecase: false # Transform title into titlecase
+external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: true
+post_asset_folder: false
 relative_link: false
 future: true
 highlight:
@@ -113,7 +43,16 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-
+  
+# Home page setting
+# path: Root path for your blogs index page. (default = '')
+# per_page: Posts displayed per page. (0 = disable pagination)
+# order_by: Posts order. (Order by date descending by default)
+index_generator:
+  path: ''
+  per_page: 10
+  order_by: -date
+  
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -123,16 +62,18 @@ tag_map:
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: MMM D, YYYY
+date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 8
+per_page: 10
 pagination_dir: page
 
+# Extensions
+## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: a-rsnippet
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -140,128 +81,3 @@ deploy:
   type: git
   repo: https://github.com/ybbzbb/ybbzbb.github.io.git
   branch: master
-
-
-# ---------------------------------------------------------------
-# Layout settings: homepage
-# ---------------------------------------------------------------
-# If enable, update date will show on the cover photo.
-index_update_date_enable: false
-
-# ---------------------------------------------------------------
-# Layout settings: post layout & leetcode layout
-# ---------------------------------------------------------------
-# If enable, update date will show in the header.
-post_update_date_enable: true
-
-# Can contain HTML
-# Appear at the begginning of the post
-# content_before_post: <div class="subscribe"><a href="http://eepurl.com/dh6iCD" target="_blank">Get Updated for Each Release!</a></div><p>
-# Can contain HTML
-# Appear at the end of the post
-# content_after_post: <a href="https://www.patreon.com/arsnippet" target="_blank"><img src="/img/patreon.png" alt="support my work at patron"></a> <a href="https://arsnippet.freeflarum.com/" target="_blank"><img src="/img/forum.jpg" alt="support my work at patron"></a> <a href="https://discord.gg/CB6CPzq" target="_blank"><img src="/img/discord.png" alt="Join the Discord"></a>
-
-# default cover image
-# example: animated gif as header
-# cover_default_img: /img/sky-clouds-moon-horizon.jpg?h=350&auto=compress&cs=tinysrgb
-
-
-# Table Of Contents in the Sidebar
-toc:
-  enable: true
-  # Automatically add list number to toc.
-  number: true
-
-# ---------------------------------------------------------------
-# Layout settings: page layout
-# ---------------------------------------------------------------
-
-# ---------------------------------------------------------------
-# Layout settings: arhive layout
-# ---------------------------------------------------------------
-# archive page title
-archive:
-    title: Archives
-    subtitle: Cool?
-
-# ---------------------------------------------------------------
-# Layout settings: poem layout
-# ---------------------------------------------------------------
-
-# ---------------------------------------------------------------
-# Layout settings: portfolio-slim layout
-# ---------------------------------------------------------------
-
-# ---------------------------------------------------------------
-# Layout settings: archive layout
-# ---------------------------------------------------------------
-
-# ---------------------------------------------------------------
-# Layout settings: 404 layout
-# ---------------------------------------------------------------
-
-# ---------------------------------------------------------------
-# Layout settings: list-category-leetcode layout
-# ---------------------------------------------------------------
-
-# ---------------------------------------------------------------
-# Layout settings: list-tag-leetcode layout
-# ---------------------------------------------------------------
-
-# ---------------------------------------------------------------
-# Layout settings: 404 layout
-# ---------------------------------------------------------------
-
-#################################################################
-# ---------------------------------------------------------------
-# Third Party Services Settings
-# ---------------------------------------------------------------
-#################################################################
-# MathJax Support
-mathjax:
-  enable: true
-  #per_page: true
-  cdn: //cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML
-
-# ---------------------------------------------------------------
-# Comment settings
-# ---------------------------------------------------------------
-# Disqus settings
-disqus_shortname: hexo-a-rsnippet
-
-# Use livere
-# use_livere: false
-# livere_uid: MTAyMC8zMz
-
-# ---------------------------------------------------------------
-# Analytics settings
-# ---------------------------------------------------------------
-# Baidu Analytics
-baidu_analytics:
-# Google Analytics
-google_analytics: UA-38355881-1            # Format: UA-xxxxxx-xx
-# Google Webmaster tools verification setting
-# See: https://www.google.com/webmasters/
-# Click "Alternative methods" => Select "HTML tag" => copy the string in the "content" property of "meta" element
-# <meta name="google-site-verification" content="xxxxxx" />
-# Input xxxxxx below
-google_site_verification: wtCjI-zcpr2FYwWS3sI4OWzMK9e7VomDrZyxpVUUIng
-
-bing_site_verification:
-yandex_site_verification:
-
-# ---------------------------------------------------------------
-# Share
-# ---------------------------------------------------------------
-# add_this_id: ra-5272bc2a7b3c1ddc
-# Enable/Disable Update date
-
-# ---------------------------------------------------------------
-# Search
-# ---------------------------------------------------------------
-# search api , set your custom key
-# It is not working now. It is a feature in the future.
-# swiftype_key:
-
-# Theme version
-version: 0.1.0
