修改 图片显示的方式

--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,13 @@ author: ybbzbb
 language: zh-Hans
 timezone: Asia/Shanghai
 
+
+
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://ybbzbb.github.io
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :year/:month/:day/:id/
 permalink_defaults:
 
 # Directory
@@ -35,7 +37,7 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -81,3 +83,4 @@ deploy:
   type: git
   repo: https://github.com/ybbzbb/ybbzbb.github.io.git
   branch: master
+  message: 'Daily updated：{{now("YYYY-MM-DD HH:mm:ss")}} by Never_yu personal PC'
