--- a/_config.yml
+++ b/_config.yml
@@ -84,3 +84,9 @@ deploy:
   repo: https://github.com/ybbzbb/ybbzbb.github.io.git
   branch: master
   message: 'Daily updated：{{now("YYYY-MM-DD HH:mm:ss")}} by Never_yu personal PC'
+
+# 搜索配置
+sitemap: 
+    path: sitemap.xml
+baidusitemap:
+    path: baidusitemap.xml
