--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -462,7 +462,7 @@ needmoreshare2:
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
-#google_site_verification:
+google_site_verification: fFO7WgWmfTANE-S4Fxg5ZHuOmeIR-QOVzH-Q4U10yqQ
 
 # Google Analytics
 #google_analytics:
