--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://ybbzbb.store
+url: https://ybbzbb.github.io
 root: /
 permalink: :year/:month/:day/:id/
 permalink_defaults:
