--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "hexo": "^5.2.0",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-filter-flowchart": "^1.0.4",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.6",
     "hexo-generator-category": "^1.0.0",
